# MarketSage-Pro

./: .dockerignore  .gitignore  README.md  api.Dockerfile  config.yaml.example  docker-compose.yml  pyproject.toml  requirements-full.txt  requirements.txt  scheduler.Dockerfile
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  SECURITY.md  api.postman_collection.json
market_sage_pro/: config.py  secrets.py
market_sage_pro/api/: main.py
market_sage_pro/backtest/: engine.py
market_sage_pro/data/: features.py  store.py
market_sage_pro/models/: ensemble.py  lightgbm_hourly.py  registry.py  tft_daily.py
market_sage_pro/notifications/: email.py  telegram.py
market_sage_pro/risk/: manager.py
market_sage_pro/scheduler/: jobs.py
market_sage_pro/signals/: generator.py
market_sage_pro/utils/: kelly.py  logging.py
notebooks/: demo.ipynb
postman/: MarketSage-Pro.postman_collection.json
tests/: test_api.py  test_config.py  test_risk.py  test_signal_generator.py
tests/backtest/: test_engine.py
ui/: Dockerfile  index.html  package-lock.json  package.json
ui/src/: App.tsx  main.tsx
